# RAG-Anything

./: .gitignore  FINAL_TEST_SUMMARY.md  MANIFEST.in  README.md  README_1.md  README_zh.md  TESTING_GUIDE.md  docker-compose.coolify.yml  env.example  pyproject.toml  requirements.txt  setup.py  test.docx  test.json
.github/workflows/: linting.yaml
db/: chroma.sqlite3
deploy/coolify/: Dockerfile  docker-compose.yml  requirements.txt
deploy/coolify/app/: main.py
docs/: batch_and_enhanced_markdown.md  batch_processing.md  context_aware_processing.md  coolify_deployment.md  enhanced_markdown.md  lmstudio_integration.md  offline_setup.md  workspace_api.md
examples/: batch_and_enhanced_markdown_example.py  batch_processing_example.py  enhanced_markdown_example.py  image_format_test.py  insert_content_list_example.py  lmstudio_integration_example.py  modalprocessors_example.py  office_document_test.py  raganything_example.py  text_format_test.py
raganything/: __init__.py  base.py  batch.py  batch_parser.py  config.py  enhanced_markdown.py  mineru_parser.py  modalprocessors.py  parser.py  processor.py  prompt.py  query.py  raganything.py  utils.py
